tests/compile-fail/integration__integration__ecl_features__eosd_exported_fn_bad_siggy_return_type.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: return types are not supported in old-style ECL subs like 'bad5'
  ┌─ <input>:7:1
  │
7 │ int bad5(int x) { return 2; }
  │ ^^^ unsupported return type


